# stickee

./: Cargo.toml  README.md  stickee.desktop
src/: main.rs
